<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.az.signup.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSemiBlack"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="20dp">

        <EditText
            android:id="@+id/edit_text_id_with_check"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_rounded_button_white_border"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/signup_id"
            android:inputType="text"
            android:maxLength="10"
            android:paddingStart="26dp"
            android:paddingEnd="100dp"
            android:singleLine="true"
            android:text="@={vm.id}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:validationBackground="@{vm.isIdValid}" />

        <TextView
            android:id="@+id/txt_id_check_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> vm.idExistenceCheck()}"
            android:paddingHorizontal="24dp"
            android:paddingBottom="1dp"
            android:text="@string/signup_duplicate_check"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_id_with_check"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_id_with_check"
            app:layout_constraintTop_toTopOf="@+id/edit_text_id_with_check" />

        <TextView
            android:id="@+id/txt_id_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/signup_id_check_error"
            android:textColor="@color/colorRed"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_id_with_check"
            bind:errorTextVisibility="@{vm.isIdValid}" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_rounded_button_white_border"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingStart="26dp"
            android:paddingEnd="100dp"
            android:singleLine="true"
            android:text="@={vm.password}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_id_error"
            bind:passwordChangeListener="@{vm.passWordValidationCheck}"
            bind:validationBackground="@{vm.isPassWordValid}" />

        <EditText
            android:id="@+id/edit_text_password_check"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_rounded_button_white_border"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/signup_password_check"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingStart="26dp"
            android:paddingEnd="100dp"
            android:singleLine="true"
            android:text="@={vm.passwordCheck}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password"
            bind:passwordChangeListener="@{vm.passWordValidationCheck}"
            bind:validationBackground="@{vm.isPassWordValid}" />

        <TextView
            android:id="@+id/txt_password_check_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:paddingBottom="1dp"
            android:text="@string/signup_password_check_error"
            android:textColor="@color/colorRed"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password_check"
            bind:errorTextVisibility="@{vm.isPassWordValid}" />

        <EditText
            android:id="@+id/edit_text_nickname"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_rounded_button_white_border"
            android:hint="@string/signup_nickname"
            android:inputType="text"
            android:maxLength="6"
            android:paddingStart="26dp"
            android:paddingEnd="100dp"
            android:singleLine="true"
            android:text="@={vm.nickname}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_password_check_error"
            bind:validationBackground="@{vm.isNicknameValid}" />

        <TextView
            android:id="@+id/txt_nickname_check_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:paddingBottom="1dp"
            android:text="@string/signup_nickname_check_error"
            android:textColor="@color/colorRed"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_nickname"
            bind:errorTextVisibility="@{vm.isNicknameValid()}" />

        <TextView
            android:id="@+id/txt_nickname_check_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:onClick="@{() -> vm.nicknameExistenceCheck()}"
            android:paddingHorizontal="24dp"
            android:paddingBottom="1dp"
            android:text="@string/signup_duplicate_check"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_nickname"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_nickname"
            app:layout_constraintTop_toTopOf="@+id/edit_text_nickname" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:background="@{vm.isSignUpValid ? @drawable/bg_rounded_button_color_purple : @drawable/bg_rounded_button_color_grey}"
            android:onClick="@{() -> vm.signUp()}"
            android:text="@string/btn_signup"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>